# mtp-MCSF

./: .cproject  .project  .travis.yml  CMakeLists.txt  Doxyfile  readme.md
app/: CMakeLists.txt  main-evo1.cpp  main-evo2.cpp  main.cpp
docs/html/: ChassisAcceleration_8cpp.html  ChassisAcceleration_8hpp.html  ChassisAcceleration_8hpp_source.html  ChassisTurnRate_8cpp.html  ChassisTurnRate_8hpp.html  ChassisTurnRate_8hpp_source.html  ChassisVelocity_8cpp.html  ChassisVelocity_8hpp.html  ChassisVelocity_8hpp_source.html  Chassis_8cpp.html  Chassis_8hpp.html  Chassis_8hpp_source.html  DriveSystem_8cpp.html  DriveSystem_8hpp.html  DriveSystem_8hpp_source.html  MotorAcceleration_8cpp.html  MotorAcceleration_8hpp.html  MotorAcceleration_8hpp_source.html  MotorPosition_8cpp.html  MotorPosition_8hpp.html  MotorPosition_8hpp_source.html  MotorVelocity_8cpp.html  MotorVelocity_8hpp.html  MotorVelocity_8hpp_source.html  PathPoint_8cpp.html  PathPoint_8hpp.html  PathPoint_8hpp_source.html  Path_8cpp.html  Path_8hpp.html  Path_8hpp_source.html  Point_8cpp.html  Point_8hpp.html  Point_8hpp_source.html  Route_8cpp.html  Route_8hpp.html  Route_8hpp_source.html  TankDrive_8cpp.html  TankDrive_8hpp.html  TankDrive_8hpp_source.html  TrajectoryPoint_8cpp.html  (+54 more)
docs/latex/: ChassisAcceleration_8cpp.tex  ChassisAcceleration_8hpp.tex  ChassisTurnRate_8cpp.tex  ChassisTurnRate_8hpp.tex  ChassisVelocity_8cpp.tex  ChassisVelocity_8hpp.tex  Chassis_8cpp.tex  Chassis_8hpp.tex  DriveSystem_8cpp.tex  DriveSystem_8hpp.tex  MotorAcceleration_8cpp.tex  MotorAcceleration_8hpp.tex  MotorPosition_8cpp.tex  MotorPosition_8hpp.tex  MotorVelocity_8cpp.tex  MotorVelocity_8hpp.tex  PathPoint_8cpp.tex  PathPoint_8hpp.tex  Path_8cpp.tex  Path_8hpp.tex  Point_8cpp.tex  Point_8hpp.tex  Route_8cpp.tex  Route_8hpp.tex  TankDrive_8cpp.tex  TankDrive_8hpp.tex  TrajectoryPoint_8cpp.tex  TrajectoryPoint_8hpp.tex  Trajectory_8cpp.tex  Trajectory_8hpp.tex  WayPoint_8cpp.tex  WayPoint_8hpp.tex  annotated.tex  classChassis.tex  classChassisAcceleration.tex  classChassisTurnRate.tex  classChassisVelocity.tex  classDriveSystem.eps  classDriveSystem.tex  classMotorAcceleration.tex  (+22 more)
framework/: Chassis.cpp  Chassis.hpp  ChassisAcceleration.cpp  ChassisAcceleration.hpp  ChassisTurnRate.cpp  ChassisTurnRate.hpp  ChassisVelocity.cpp  ChassisVelocity.hpp  DriveSystem.cpp  DriveSystem.hpp  MotorAcceleration.cpp  MotorAcceleration.hpp  MotorPosition.cpp  MotorPosition.hpp  MotorVelocity.cpp  MotorVelocity.hpp  Path.cpp  Path.hpp  PathPoint.cpp  PathPoint.hpp  Point.cpp  Point.hpp  Route.cpp  Route.hpp  TankDrive.cpp  TankDrive.hpp  Trajectory.cpp  Trajectory.hpp  TrajectoryPoint.cpp  TrajectoryPoint.hpp  WayPoint.cpp  WayPoint.hpp
results/: cppcheckout  cpplintout
results/Results as of 2017-03-11/: 1D2P motion profile - 5rot 10ms.csv  1D2P motion profile - 5rot 25ms.xlsx
results/Results as of 2017-03-14/: 1D2P motion profile - 5rot 25ms.xlsx  (+2 more)
test/: CMakeLists.txt  MCSFtest.cpp  main.cpp
(+65 files in other folders)
